--- a/configurations.properties
+++ b/configurations.properties
@@ -6,6 +6,7 @@ browser = firefox
 amazonUrl = https://www.amazon.com
 youtubeUrl = https://www.youtube.com
 qdUrl = https://www.qualitydemy.com
+googleUrl = https://www.google.com
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
