--- a/configurations.properties
+++ b/configurations.properties
@@ -7,6 +7,7 @@ amazonUrl = https://www.amazon.com
 youtubeUrl = https://www.youtube.com
 qdUrl = https://www.qualitydemy.com
 googleUrl = https://www.google.com
+herokuappUrl = https://the-internet.herokuapp.com/add_remove_elements/
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
