--- a/configurations.properties
+++ b/configurations.properties
@@ -8,6 +8,7 @@ youtubeUrl = https://www.youtube.com
 qdUrl = https://www.qualitydemy.com
 googleUrl = https://www.google.com
 herokuappUrl = https://the-internet.herokuapp.com/add_remove_elements/
+webUniUrl = http://webdriveruniversity.com/
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
