--- a/configurations.properties
+++ b/configurations.properties
@@ -9,6 +9,7 @@ qdUrl = https://www.qualitydemy.com
 googleUrl = https://www.google.com
 herokuappUrl = https://the-internet.herokuapp.com/add_remove_elements/
 webUniUrl = http://webdriveruniversity.com/
+guruUrl = http://demo.guru99.com/test/web-table-element.php
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
