--- a/configurations.properties
+++ b/configurations.properties
@@ -10,6 +10,7 @@ googleUrl = https://www.google.com
 herokuappUrl = https://the-internet.herokuapp.com/add_remove_elements/
 webUniUrl = http://webdriveruniversity.com/
 guruUrl = http://demo.guru99.com/test/web-table-element.php
+saucedemoUrl = https://www.saucedemo.com
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
