--- a/configurations.properties
+++ b/configurations.properties
@@ -11,6 +11,7 @@ herokuappUrl = https://the-internet.herokuapp.com/add_remove_elements/
 webUniUrl = http://webdriveruniversity.com/
 guruUrl = http://demo.guru99.com/test/web-table-element.php
 saucedemoUrl = https://www.saucedemo.com
+webUniFrameUrl = http://webdriveruniversity.com/IFrame/index.html
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
